# sudoku

./: README.md  setup.cfg  sudoku.py  sudoku.txt
