[metadata]
project_urls = 
	Documentation = https://github.com/Julien00859/sudoku/wiki
	Issue = https://github.com/Julien00859/sudoku/issues
	Repository = https://github.com/Julien00859/sudoku
author_email = Julien Castiaux <julien.castiaux@gmail.com>
description = Sudoku generator and solver
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = Julien Castiaux <julien.castiaux@gmail.com>
name = sudoku
version = 0.0.0
classifiers = 
	Programming Language :: Python :: 3 :: Only

[options]
packages = sudoku
python_requires = >=3.9

[options.package_data]
* = data/*

[options.extras_require]
dev = 
	build
	pip

